# berana

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  berana.py  pyproject.toml  requirements.txt  setup.sh
config/: settings.py
docs/research/: hitl_methodology.md  layout_analysis_report.md
evals/: benchmark_translation.py
input/: glossary.json  sample.gez
modules/cli/: __init__.py  common.py  layout_commands.py  layout_infer_runtime.py  ocr_commands.py  runtime.py
modules/ocr_engine/: extractor.py  layout_mapping.py  layout_parser.py  orchestrator.py  output_writer.py
modules/ocr_engine/layout/: column_engine.py  yolo_engine.py
modules/ocr_engine/pipelines/: __init__.py  diagnostics.py  inference.py  ingest.py  poc.py  (+2 more)
schemas/: ocr_models.py
tests/: test_cli_runtime.py  test_hitl_yolo_finetuner_export.py  test_hitl_yolo_finetuner_geometry.py  test_hitl_yolo_finetuner_train.py  test_ocr_schemas.py  test_orchestration_chaining.py  test_pdf_preprocessor.py  test_run_registry.py  test_splicing_geometry.py  test_splicing_source_resolution.py
tools/: debug_extractor.py  export_hitl_coordinates.py  hitl_line_editor.py  hitl_yolo_finetuner.py  ingest_labels.py  yolo_debug.py
tools/hitl_line_editor_app/: README.md  __init__.py  app.py  db.py  export.py  geometry.py  paths.py  state.py
tools/hitl_yolo_finetuner_app/: README.md  export.py  geometry.py  preview.py  train.py
tools/label_studio/: .env.example  README.md  docker-compose.yaml  project_ui.xml  setup_label_studio.sh
utils/: label_studio_adapter.py  logger.py  run_registry.py
(+8 files in other folders)
